<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_JACK_STATUS" Id="{a3acbe3b-465c-41e5-804a-4a045ddeceb8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_JACK_STATUS :
(
	UNINIT:=0,INIT,READY,OPENED,CLOSED,OPENING,CLOSING,ERROR,PAUSE
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>