<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_JACKS" Id="{51546317-4017-4ba2-8eb8-c45116cb1f8d}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	fbJack1: FB_JACK;
	fbJack2: FB_JACK;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>